# nytp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  ny-test.ny  nytrogen.json  run.sh  tree-sitter-nytrogen.json
include/: json_parser.hpp  manager.hpp  package.hpp  utils.hpp
src/: json_parser.cpp  main.cpp  manager.cpp
